<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Learn Words</string>
    <string name="stop_service">Stop</string>
    <string name="start_service">Start</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_word">Add word</string>
    <string name="action_remove_words">Remove words</string>
    <string name="action_search_word">Search word</string>
    <string name="action_search_user">Search user</string>
    <string name="action_return">Return</string>
    <string name="action_remove_dict">Remove dictionary</string>
    <string name="action_rename_dict">Rename dictionary</string>
    <string name="action_load_dict">Import dictionary</string>
    <string name="action_upload_dict">Export dictionary</string>
    <string name="action_add_dict">Add dictionary</string>
    <string name="action_about_app">About app</string>
    <string name="action_help">Help</string>

    <string name="action_clear_wordstats">Clear stats</string>
    <string name="action_unlock_word">Unlock words</string>
    <string name="action_lock_word">Lock words</string>
    <string name="action_delete_word">Delete words</string>
    <string name="title_about_app">About app</string>
    <string name="list_empty">Word list is empty</string>
    <string name="navigation_title">Manage vocabularies</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="dict_name">General</string>
    <string name="error_title">Error</string>
    <string name="no_dict">---</string>
    <string name="word">Word</string>
    <string name="translate">Translate</string>
    <string name="add">Add dictionary</string>
    <string name="new_dict_title">Enter dictionary name</string>
    <string name="edit_word_title">Edit word</string>
    <string name="add_word_title">Add word</string>
    <string name="add_empty_dictionary_title">Create new</string>
    <string name="direction_word_to_translate">word->translation</string>
    <string name="direction_translate_to_word">translation->word</string>
    <string name="confirm_remove_dict_message">Remove dictionary?</string>
    <string name="confirm_remove_dict_title">Confirming</string>
    <string name="word_updated_toast">The word was updated</string>
    <string name="word_list_action_mode_title"> Selected</string>
    <string name="word_list_action_delete_items_complete">Deleted: </string>
    <string name="word_list_action_delete_items_progress_title">Deleting</string>
    <string name="word_list_action_clear_items_complete">Cleared: </string>
    <string name="word_list_action_clear_items_complete_title">Clearing</string>
    <string name="word_list_action_locked_items_complete">Locked: </string>
    <string name="word_list_action_unlocked_items_complete">Unlocked: </string>

    <string name="sdcard0">Phone storage</string>
    <string name="sdcard1">External storage</string>
    <string name="default_dict_name">General</string>
    <string name="not_using">Not using</string>
    <string name="action_stop_service">Stop</string>
    <string name="action_start_service">Start service</string>
    <string name="action_resume_service">Resume service</string>
    <string name="action_pause_service_8">On 8 h</string>
    <string name="action_pause_service_1">On 1 h</string>
    <string name="dictionary_downloaded">Dictionary has downloaded</string>
    <string name="dictionary_uploaded">Dictionary has uploaded</string>
    <string name="parent_directory">Parent directory</string>
    <string name="press_to_save">Save</string>
    <string name="directory_actual">Directory actual: </string>
    <string name="folder">Folder</string>
    <string name="file_size">File Size: </string>
    <string name="stopped">Stopped</string>
    <string name="paused1">Paused on 1 hour</string>
    <string name="paused8">Paused on 8 hours</string>
    <string name="running">Running</string>
    <string name="dictionary_changed">Current dictionary has been changed.
    Service stopped.</string>
    <string name="load_default_dictionary_title">Load dictionary</string>
    <string name="load_default_dictionary_message">Do load default dictionary?</string>
    <string name="skip">Skip</string>
    //-------------------Errors----------------------
    <string name="error_no_dict_choose">Firstly choose or create new dictionary</string>
    <string name="error_dict_is_empty">The dictionary is empty </string>
    <string name="error_no_internet_connection">No internet connection</string>
    <string name="error_empty_text_word">The word is empty </string>
    <string name="error_empty_text_translate">The word is translate </string>
    <string name="error_dictionary_is_not_yours">The dictionary is not yours </string>
    <string name="error_dictionary_not_found_title">Dictionaries not found</string>
    <string name="error_dictionary_not_found_message">Do synchronize your data from internet?</string>
    <string name="error_no_permission_allowed">No permissions allowed</string>

    <string-array name="values">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4 is really long</item>
        <item>Item 5</item>
        <item>Item 6</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <string name="settings_toast_reset">Settings has been reseted</string>
    <string name="settings_toast_sync">Press "sync" button to apply your changes</string>
    <!-- Example General settings -->
    <string name="pref_general">General</string>

    <string name="pref_general_public">Privacy</string>
    <string name="pref_general_public_summary">Searchable</string>
    <string name="pref_general_non_public_summary">Not searchable</string>

    <string name="pref_general_empty_is_wrong">Empty answer</string>
    <string name="pref_general_empty_is_wrong_summary">Consider an empty answer incorrect</string>

    <string name="pref_general_study_word">Quantity of words learned in parallel</string>
    <string name="pref_general_study_word_summary">Quantity of words studied in parallel</string>
    <string name="pref_general_wrong_answers_to_skip">Quantity skips to finish lesson</string>

    <string name="pref_general_words_per_unlock">Quantity of words in lesson</string>
    <string name="pref_general_words_per_unlock_summary">Quantity of words in lesson</string>
    <string name="pref_general_use_tips">Use tips in lesson</string>
    <string name="pref_general_use_tips_summary">if use it not count right answer</string>
    <string name="pref_general_right_answer">Percent for the right answer</string>
    <string name="pref_general_wrong_answer">Percent for the wrong answer</string>
    <string name="pref_general_reset_settings">Reset settings dictionary</string>
    <string name="pref_general_reset_settings_summary">All settings will be replaced with standard</string>

    <string-array name="pref_general_right_answer_list_entries">
        <item>5%</item>
        <item>10%</item>
        <item>15%</item>
        <item>20%</item>
        <item>25%</item>
    </string-array>
    <string-array name="pref_general_right_answer_list_values">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
    </string-array>

    <string-array name="pref_general_wrong_answer_list_entries">
        <item>5%</item>
        <item>10%</item>
        <item>15%</item>
    </string-array>
    <string-array name="pref_general_wrong_answer_list_values">
        <item>5</item>
        <item>10</item>
        <item>15</item>
    </string-array>


    <string name="label_google_sign_in">Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with database.</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="firebase_status_fmt">Database User: %s</string>
    <string name="loading">Loading…</string>
    <string name="no_auth">No auth</string>

</resources>