<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lockscreen_forground_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">        <!--style="@style/AppTheme"-->

    <RelativeLayout
        android:id="@+id/lockscreen_forground_status_dummy"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="@color/lock_background_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="ca-app-pub-3650741793114344/9049316757" />//ca-app-pub-3650741793114344/9049316757 - my//ca-app-pub-3940256099942544/6300978111 - test

        <TextView
            android:id="@+id/word_text"
            style="@style/TextViewAppThemeScalable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/adView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/padding"
            android:paddingEnd="@dimen/fui_wrapper_padding_horiz"
            android:paddingStart="@dimen/fui_wrapper_padding_horiz"
            android:text="@string/word"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/translate_text"
            style="@style/TextViewAppThemeScalable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/word_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/padding"
            android:drawableRight="@android:drawable/ic_input_delete"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/fui_wrapper_padding_horiz"
            android:text="@string/translate"
            android:textAlignment="center" />

        <TableLayout
            android:id="@+id/grid_buttons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/skip"
            android:layout_below="@+id/translate_text"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding"
            android:gravity="center">
        </TableLayout>

        <RelativeLayout
            android:id="@+id/skip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/complete_text"
                style="@style/TextViewAppThemeScalable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/padding"
                android:paddingEnd="@dimen/fui_wrapper_padding_horiz"
                android:paddingStart="@dimen/fui_wrapper_padding_horiz"
                android:text="12/15"
                android:textAlignment="viewEnd"
                android:textColor="@android:color/white" />

            <TextClock
                android:id="@+id/textClock"
                style="@style/TextViewAppThemeScalable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding"
                android:gravity="center_vertical|start"
                android:paddingStart="@dimen/fui_wrapper_padding_horiz" />

            <Button
                android:id="@+id/button_skip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textClock"
                android:layout_gravity="bottom"
                android:text="@string/skip"/>
        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>

